# inspectML-Python-Library-

./: LICENSE.txt  pyproject.toml
inspectML/evaluation/: classification.py
tests/: test_basic.py
