[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectML"
version = "0.1.4"
authors = [
    { name = "Tushar Upadhyay", email = "tusharupadhyay@zohomail.in" }
]
description = "A lightweight ML evaluation and monitoring toolkit."
readme = "README.md" 
requires-python = ">=3.8"
license = { file = "LICENSE.txt" } 


dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "tqdm",
    "psutil",
]


keywords = [
    "machine-learning",
    "ml",
    "model-evaluation",
    "drift-detection",
    "monitoring",
    "xai"
]


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/psycheExploiter/inspectML" 


[project.optional-dependencies]
generative = ["torch"]
plotting = ["plotly"]

full = ["torch", "plotly"] 
